PROJECT(WarChess)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE_DIRECTORIES("/opt/sysroot/usr/local/include/")
ADD_SUBDIRECTORY(ComVision)
LINK_DIRECTORIES("/opt/sysroot/usr/local/lib")
#SET(CMAKE_TOOLCHAIN_FILE cmake/modules/arm.cmake)
#SET(CMAKE_SOURCE_DIR .)
#SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${CMAKE_SOURCE_DIR}/cmake/modules)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
SET(EXTRA_LIBS ${EXTRA_LIBSR} ComVision)
LINK_LIBRARIES(opencv_core opencv_highgui opencv_imgproc)
ADD_EXECUTABLE(warchess capture.cpp)
TARGET_LINK_lIBRARIES(warchess ComVision)
#FIND_PACKAGE(libcv REQUIRED)
#FIND_PACKAGE(libopencv_highgui REQUIRED)
#FIND_PACKAGE(libopencv_imgproc REQUIRED)
#MARK_AS_ADVANCED(
#	LIBCV_CXX_INCLUDE_DIR
#	LIBCV_CXX_LIBRARIES
#	)
#IF(LIBCV_CXX_INCLUDE_DIR)
#	MESSAGE(STATUS "Found Include Dir")
#	INCLUDE_DIRECTORIES(${LIBCV_CXX_INCLUDE_DIR})
#ENDIF(LIBCV_CXX_INCLUDE_DIR)

#IF(LIBCV_CXX_LIBRARIES)
#	MESSAGE(STATUS "Found Lib Dir")
#	TARGET_LINK_LIBRARIES(warchess ${LIBCV_CXX_LIBRARIES})
#ENDIF(LIBCV_CXX_LIBRARIES)
